# G4Tarc

./: CMakeLists.txt  MYMAKE_G4_TARC.RUN  README.md  RootDataPlotting.C  RootMacroNew.C  TARCVEGA.run  histopy.py  makeClean  plotHisto.py  plotbyPython.py  pulsedNeutron.mac  repoBrief  run.mac  runShort.mac  tarcVega.cc  testPlotneutron.C  testRootMacro.C  vis.mac
Analysis/: G4TARCETAnalysis.cxx
Data/GeomData/: tarc_geometry_lv.gdml
Data/GeomData/schema/: gdml.xsd  gdml_core.xsd  gdml_define.xsd  gdml_materials.xsd  gdml_parameterised.xsd  gdml_replicas.xsd  gdml_solids.xsd
Data/TARC_EXPT_DATA/: TARC_EXPTL_DATA.txt
G4Patch/: G4_Federico.patch
GeomData/: tarc_geometry.gdml
IMP_CODELETS/: RootMacroNew.C  simple.C
Presentation/: CERN_PH-SFT_2018.tex  TARC_BERTINI_BIC_COMPARISON.odt
Presentation/CERN_NUCLEAR/: CERN_NUC_2018.tex
Presentation/NEW/CERN/: CERN_Geant4_Aug21_2018.aux  CERN_Geant4_Aug21_2018.nav  CERN_Geant4_Aug21_2018.snm  CERN_Geant4_Aug21_2018.tex
Presentation/NEW/SYMPNP2018/: SYMPNP_2018.aux  SYMPNP_2018.tex
Presentation/NEW/SYMPNP2018/latex_template_cont/: cont_samp.tex
Presentation/OLD/CERN_NUCLEAR/: CERN_NUC_2018.aux  CERN_NUC_2018.snm
Presentation/OLD/PHSFT/: CERN_PH-SFT_2018.snm
Presentation/OLD/PICS/: ADSPlan.ppm
Presentation/PHSFT/: CERN_PH-SFT_2018.aux  CERN_PH-SFT_2018.tex
Presentation/PICS/: ThUConsumtion.ppm
include/: G4TARCActionInitialization.hh  G4TARCAnalysis.hh  G4TARCCheckVolumeSD.hh  G4TARCDetectorConstruction.hh  G4TARCDetectorMessenger.hh  G4TARCEventAction.hh  G4TARCHisto.hh  G4TARCHistoManager.hh  G4TARCHistoMessenger.hh  G4TARCParallelWorld.hh  G4TARCPhysicsList.hh  G4TARCPrimaryGeneratorAction.hh  G4TARCRun.hh  G4TARCRunAction.hh  G4TARCStackingAction.hh  G4TARCSteppingAction.hh  G4TARCTargetSD.hh  G4TARCVirtualSD.hh  G4TARCVolumeSD.hh  G4TARCleadTargSD.hh  G4TARCtransmutSD.hh
src/: G4TARCActionInitialization.cxx  G4TARCCheckVolumeSD.cxx  G4TARCDetectorConstruction.cxx  G4TARCDetectorMessenger.cxx  G4TARCEventAction.cxx  G4TARCEventActionMessenger.cxx  G4TARCHisto.cxx  G4TARCHistoManager.cxx  G4TARCHistoMessenger.cxx  G4TARCPVolumeStore.cxx  G4TARCParallelWorld.cxx  G4TARCPhysicsList.cxx  G4TARCPrimaryGeneratorAction.cxx  G4TARCRun.cxx  G4TARCRunAction.cxx  G4TARCStackingAction.cxx  G4TARCSteppingAction.cxx  G4TARCTargetSD.cxx  G4TARCVirtualSD.cxx  G4TARCVolumeSD.cxx  G4TARCleadTargSD.cxx  G4TARCtransmutSD.cxx
